--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <title>Sviluppo di una pagina web - Blog Epicode</title>
     </head>
     <body>
+      <div class="logomenu">
       <header>
         <img src="./assets/img/logo.svg" alt="Logo epicode" width="5%" />
-        <p>Epicode - Il blog dei developers</p>
+        <p class="title"><strong>EPICODE - IL BLOG DEI DEVELOPERS</strong></p>
       </header>
 
       <nav>
@@ -28,6 +29,7 @@
           <li><a href="javascript:void(0)">Job</a></li>
         </ul>
       </nav>
+      </div>
       <hr />
       <main>
         <h2>Come creare un template per i post</h2>
