--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="/assets/css/reset.css">
-      <link rel="stylesheet" href="/assets/css/style.css" />
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-      <title>Sviluppo di una pagina web - Blog Epicode</title>
-    </head>
-    <body>
-      <div class="logomenu">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/reset.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Sviluppo di una pagina web - Blog Epicode</title>
+  </head>
+  <body>
+    <div class="logomenu">
       <header>
         <img src="./assets/img/logo.svg" alt="Logo epicode" width="5%" />
         <p class="title"><strong>EPICODE - IL BLOG DEI DEVELOPERS</strong></p>
@@ -29,181 +28,176 @@
           <li><a href="javascript:void(0)">Job</a></li>
         </ul>
       </nav>
+    </div>
+    <hr />
+    <main>
+      <h2>Come creare un template per i post</h2>
+      <div>
+        <p>
+          <i class="fas fa-pencil"></i>di Mario Rossi - pubblicato il 25-10-2020
+        </p>
+
+        <p>
+          La prima cosa da fare è suddividere in blocchi logici la pagina,
+          identificando le <b>parti comuni</b> da applicare a tutte le pagine
+        </p>
+
+        <p>Le varie aree saranno quindi suddivise in:</p>
       </div>
-      <hr />
-      <main>
-        <h2>Come creare un template per i post</h2>
-        <div>
-          <p>
-            </i>di Mario Rossi - pubblicato il
-            25-10-2020
-          </p>
 
-          <p>
-            La prima cosa da fare è suddividere in blocchi logici la pagina,
-            identificando le <b>parti comuni</b> da applicare a tutte le pagine
-          </p>
+      <div>
+        <ul>
+          <li>Contenuti di intestazione del tag &lt;header&gt;</li>
+          <li>
+            Contenuti centrali variabili del tag &lt;main&gt;(corpo principale)
+          </li>
+          <li>
+            Contenuti di fine pagina comuni, da inserire nel tag &lt;footer&gt;
+          </li>
+        </ul>
+      </div>
+    </main>
 
-          <p>Le varie aree saranno quindi suddivise in:</p>
-        </div>
-
-        <div>
-          <ul>
-            <li>Contenuti di intestazione del tag &lt;header&gt;</li>
-            <li>
-              Contenuti centrali variabili del tag &lt;main&gt;(corpo
-              principale)
-            </li>
-            <li>
-              Contenuti di fine pagina comuni, da inserire nel tag
-              &lt;footer&gt;
-            </li>
-          </ul>
-        </div>
-      </main>
-
-      <article>
-        <h2>Formattazione dle codice</h2>
-        <div>
-          <p>
-            Il testo dell'articolo dovrà essere formattato per identificare
-            tutte le parti da <b>selezionare con i CSS</b>. Perciò i passi
-            saranno:
-          </p>
-          <ol>
-            <li>
-              Progettare il markup assegnando ad ogni specifico testo il tag
-              appropriato
-            </li>
-            <li>
-              Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso
-              il basso
-            </li>
-            <li>Applicare gli stili CSS</li>
-          </ol>
-
-          <p>
-            L'applicazione di stili CSS è cresciuta negli anni fino a
-            raggiungere la diffusione pressoché totale.
-          </p>
-        </div>
-
-        <table>
-          <thead>
-            <caption>
-              Diffusione dei CSS
-            </caption>
-          </thead>
-          <thead>
-            <tr>
-              <th>Anno</th>
-              <th>%di utilizzo</th>
-              <th>Supporto browser</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2000</td>
-              <td>20%</td>
-              <td>17%</td>
-            </tr>
-          </tbody>
-          <tbody>
-            <tr>
-              <td>2002</td>
-              <td>35%</td>
-              <td>22%</td>
-            </tr>
-          </tbody>
-          <tbody>
-            <tr>
-              <td>2004</td>
-              <td>45%</td>
-              <td>42%</td>
-            </tr>
-          </tbody>
-          <tbody>
-            <tr>
-              <td>2008</td>
-              <td>80%</td>
-              <td>51%</td>
-            </tr>
-          </tbody>
-          <tbody>
-            <tr>
-              <td>2012</td>
-              <td>100%</td>
-              <td>76%</td>
-            </tr>
-          </tbody>
-        </table>
-      </article>
-
-      <section>
-        <div>
-          <p>
-            Un test di validazione potrà essere fatto tramite il
-            <a href="https://jigsaw.w3.org/css-validator/" target="_blank"
-              >tool online</a
-            >
-            dedicato allo scopo. Una volta ottimizzato il tutto, avremo
-            raggiunto il nostro obiettivo ed essere stati dei veri developers
-            come loro:
-          </p>
-          <iframe
-            width="315"
-            height="315"
-            src="https://www.youtube.com/embed/dvOvHXruEDM?si=Md_DylR1w-DRx3Pc"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
-        </div>
-      </section>
-
-      <section>
-        <h3>Novità!</h3>
+    <article>
+      <h2>Formattazione dle codice</h2>
+      <div>
         <p>
-          Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
-          nostra newsletter:
+          Il testo dell'articolo dovrà essere formattato per identificare tutte
+          le parti da <b>selezionare con i CSS</b>. Perciò i passi saranno:
         </p>
+        <ol>
+          <li>
+            Progettare il markup assegnando ad ogni specifico testo il tag
+            appropriato
+          </li>
+          <li>
+            Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso
+            il basso
+          </li>
+          <li>Applicare gli stili CSS</li>
+        </ol>
 
-        <form action="email" method="get">
-          <fieldset>
-            <input type="email" placeholder="inserisci l'email" />
-            <button tipe="submit">Iscriviti!</button>
-          </fieldset>
-        </form>
-      </section>
-
-      <aside>
-        <h3>Articoli correlati</h3>
-        <div>
-          <p><a href="javascript:void(0)">Validare il codice HTML</a></p>
-          <p>Categoria: develo</p>
-          <p>Data: 18-9-2020</p>
-          <p><a href="javascript:void(0)">Correggere la sintassi</a></p>
-          <p>Categoria: develop</p>
-          <p>Data: 16-9-2020</p>
-          <p><a href="javascript:void(0)">Meno Kb nella pagina</a></p>
-          <p>Categoria: ottimizzazione</p>
-          <p>Data: 30-9-2020</p>
-        </div>
-      </aside>
-
-      <hr />
-
-      <footer>
-        <p>Blog Epicode ©2023</p>
         <p>
-          <i
-            >Testata online di Mario Rossi, registrata con prot. n.213/2018 -
-            via Luigi Einaudi 2 - Milano. P.IVA 00112233.
-            <a href="mailto:info@epicode.school">info@epicode.school</a></i
+          L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere
+          la diffusione pressoché totale.
+        </p>
+      </div>
+
+      <table>
+        <thead>
+          <caption>
+            Diffusione dei CSS
+          </caption>
+        </thead>
+        <thead>
+          <tr>
+            <th>Anno</th>
+            <th>%di utilizzo</th>
+            <th>Supporto browser</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2000</td>
+            <td>20%</td>
+            <td>17%</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td>2002</td>
+            <td>35%</td>
+            <td>22%</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td>2004</td>
+            <td>45%</td>
+            <td>42%</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td>2008</td>
+            <td>80%</td>
+            <td>51%</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <td>2012</td>
+            <td>100%</td>
+            <td>76%</td>
+          </tr>
+        </tbody>
+      </table>
+    </article>
+
+    <section>
+      <div>
+        <p>
+          Un test di validazione potrà essere fatto tramite il
+          <a href="https://jigsaw.w3.org/css-validator/" target="_blank"
+            >tool online</a
           >
+          dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto
+          il nostro obiettivo ed essere stati dei veri developers come loro:
         </p>
-      </footer>
-    </body>
-  </html>
+        <iframe
+          width="315"
+          height="315"
+          src="https://www.youtube.com/embed/dvOvHXruEDM?si=Md_DylR1w-DRx3Pc"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+
+    <section>
+      <h3>Novità!</h3>
+      <p>
+        Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra
+        newsletter:
+      </p>
+
+      <form action="email" method="get">
+        <fieldset>
+          <input type="email" placeholder="inserisci l'email" />
+          <button tipe="submit">Iscriviti!</button>
+        </fieldset>
+      </form>
+    </section>
+
+    <aside>
+      <h3>Articoli correlati</h3>
+      <div>
+        <p><a href="javascript:void(0)">Validare il codice HTML</a></p>
+        <p>Categoria: develo</p>
+        <p>Data: 18-9-2020</p>
+        <p><a href="javascript:void(0)">Correggere la sintassi</a></p>
+        <p>Categoria: develop</p>
+        <p>Data: 16-9-2020</p>
+        <p><a href="javascript:void(0)">Meno Kb nella pagina</a></p>
+        <p>Categoria: ottimizzazione</p>
+        <p>Data: 30-9-2020</p>
+      </div>
+    </aside>
+
+    <hr />
+
+    <footer>
+      <p>Blog Epicode ©2023</p>
+      <p>
+        <i
+          >Testata online di Mario Rossi, registrata con prot. n.213/2018 - via
+          Luigi Einaudi 2 - Milano. P.IVA 00112233.
+          <a href="mailto:info@epicode.school">info@epicode.school</a></i
+        >
+      </p>
+    </footer>
+  </body>
+</html>
