--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       </header>
 
       <nav>
-        <ul>
-          <li><a href="javascript:void(0)">Home</a></li>
-          <li><a href="javascript:void(0)">Articoli</a></li>
-          <li><a href="javascript:void(0)">Job</a></li>
+        <ul class="menulist">
+          <li><a href="javascript:void(0)">&rAarr; Home &lAarr;</a></li>
+          <li><a href="javascript:void(0)">&rAarr; Articoli &lAarr;</a></li>
+          <li><a href="javascript:void(0)">&rAarr; Job &lAarr;</a></li>
         </ul>
       </nav>
     </div>
-    <hr />
+
     <main>
-      <h2>Come creare un template per i post</h2>
+      <h2>Come creare un template per i post</h2
       <div>
-        <p>
-          <i class="fas fa-pencil"></i>di Mario Rossi - pubblicato il 25-10-2020
+        <p class="autor">
+         <i class="fas fa-wine-bottle"></i> di Mario Rossi - pubblicato il 25-10-2020
         </p>
 
         <p>
@@ -56,136 +56,138 @@
           </li>
         </ul>
       </div>
+
+      <article>
+        <h2>Formattazione dle codice</h2>
+        <div>
+          <p>
+            Il testo dell'articolo dovrà essere formattato per identificare
+            tutte le parti da <b>selezionare con i CSS</b>. Perciò i passi
+            saranno:
+          </p>
+          <ol>
+            <li>
+              Progettare il markup assegnando ad ogni specifico testo il tag
+              appropriato
+            </li>
+            <li>
+              Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso
+              il basso
+            </li>
+            <li>Applicare gli stili CSS</li>
+          </ol>
+
+          <p>
+            L'applicazione di stili CSS è cresciuta negli anni fino a
+            raggiungere la diffusione pressoché totale.
+          </p>
+        </div>
+
+        <table>
+          <thead>
+            <caption>
+              Diffusione dei CSS
+            </caption>
+          </thead>
+          <thead>
+            <tr>
+              <th>Anno</th>
+              <th>%di utilizzo</th>
+              <th>Supporto browser</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2000</td>
+              <td>20%</td>
+              <td>17%</td>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+              <td>2002</td>
+              <td>35%</td>
+              <td>22%</td>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+              <td>2004</td>
+              <td>45%</td>
+              <td>42%</td>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+              <td>2008</td>
+              <td>80%</td>
+              <td>51%</td>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+              <td>2012</td>
+              <td>100%</td>
+              <td>76%</td>
+            </tr>
+          </tbody>
+        </table>
+      </article>
+
+      <section>
+        <div>
+          <p>
+            Un test di validazione potrà essere fatto tramite il
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank"
+              >tool online</a
+            >
+            dedicato allo scopo. Una volta ottimizzato il tutto, avremo
+            raggiunto il nostro obiettivo ed essere stati dei veri developers
+            come loro:
+          </p>
+          <iframe
+            width="315"
+            height="315"
+            src="https://www.youtube.com/embed/dvOvHXruEDM?si=Md_DylR1w-DRx3Pc"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+
+      <section>
+        <h3>Novità!</h3>
+        <p>
+          Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
+          nostra newsletter:
+        </p>
+
+        <form action="email" method="get">
+          <fieldset>
+            <input type="email" placeholder="inserisci l'email" />
+            <button tipe="submit">Iscriviti!</button>
+          </fieldset>
+        </form>
+      </section>
+
+      <aside>
+        <h3>Articoli correlati</h3>
+        <div>
+          <p><a href="javascript:void(0)">Validare il codice HTML</a></p>
+          <p>Categoria: develo</p>
+          <p>Data: 18-9-2020</p>
+          <p><a href="javascript:void(0)">Correggere la sintassi</a></p>
+          <p>Categoria: develop</p>
+          <p>Data: 16-9-2020</p>
+          <p><a href="javascript:void(0)">Meno Kb nella pagina</a></p>
+          <p>Categoria: ottimizzazione</p>
+          <p>Data: 30-9-2020</p>
+        </div>
+      </aside>
     </main>
-
-    <article>
-      <h2>Formattazione dle codice</h2>
-      <div>
-        <p>
-          Il testo dell'articolo dovrà essere formattato per identificare tutte
-          le parti da <b>selezionare con i CSS</b>. Perciò i passi saranno:
-        </p>
-        <ol>
-          <li>
-            Progettare il markup assegnando ad ogni specifico testo il tag
-            appropriato
-          </li>
-          <li>
-            Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso
-            il basso
-          </li>
-          <li>Applicare gli stili CSS</li>
-        </ol>
-
-        <p>
-          L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere
-          la diffusione pressoché totale.
-        </p>
-      </div>
-
-      <table>
-        <thead>
-          <caption>
-            Diffusione dei CSS
-          </caption>
-        </thead>
-        <thead>
-          <tr>
-            <th>Anno</th>
-            <th>%di utilizzo</th>
-            <th>Supporto browser</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>2000</td>
-            <td>20%</td>
-            <td>17%</td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <td>2002</td>
-            <td>35%</td>
-            <td>22%</td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <td>2004</td>
-            <td>45%</td>
-            <td>42%</td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <td>2008</td>
-            <td>80%</td>
-            <td>51%</td>
-          </tr>
-        </tbody>
-        <tbody>
-          <tr>
-            <td>2012</td>
-            <td>100%</td>
-            <td>76%</td>
-          </tr>
-        </tbody>
-      </table>
-    </article>
-
-    <section>
-      <div>
-        <p>
-          Un test di validazione potrà essere fatto tramite il
-          <a href="https://jigsaw.w3.org/css-validator/" target="_blank"
-            >tool online</a
-          >
-          dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto
-          il nostro obiettivo ed essere stati dei veri developers come loro:
-        </p>
-        <iframe
-          width="315"
-          height="315"
-          src="https://www.youtube.com/embed/dvOvHXruEDM?si=Md_DylR1w-DRx3Pc"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-      </div>
-    </section>
-
-    <section>
-      <h3>Novità!</h3>
-      <p>
-        Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra
-        newsletter:
-      </p>
-
-      <form action="email" method="get">
-        <fieldset>
-          <input type="email" placeholder="inserisci l'email" />
-          <button tipe="submit">Iscriviti!</button>
-        </fieldset>
-      </form>
-    </section>
-
-    <aside>
-      <h3>Articoli correlati</h3>
-      <div>
-        <p><a href="javascript:void(0)">Validare il codice HTML</a></p>
-        <p>Categoria: develo</p>
-        <p>Data: 18-9-2020</p>
-        <p><a href="javascript:void(0)">Correggere la sintassi</a></p>
-        <p>Categoria: develop</p>
-        <p>Data: 16-9-2020</p>
-        <p><a href="javascript:void(0)">Meno Kb nella pagina</a></p>
-        <p>Categoria: ottimizzazione</p>
-        <p>Data: 30-9-2020</p>
-      </div>
-    </aside>
 
     <hr />
 
