--- a/index.html
+++ b/index.html
@@ -22,25 +22,20 @@
       </header>
 
       <nav>
-        <ul class="menulist">
-          <li><a href="javascript:void(0)">&rAarr; Home &lAarr;</a></li>
-          <li><a href="javascript:void(0)">&rAarr; Articoli &lAarr;</a></li>
-          <li><a href="javascript:void(0)">&rAarr; Job &lAarr;</a></li>
+        <ul>
+          <li><a class="menulist" href="javascript:void(0)">&rAarr; Articoli &lAarr;</a></li>
+          <li><a class="menulist" href="javascript:void(0)">&rAarr; Job &lAarr;</a></li>
+          <li><a class="menulist" href="javascript:void(0)">&rAarr; Home &lAarr;</a></li>
         </ul>
       </nav>
     </div>
 
     <main>
-      <h2>Come creare un template per i post</h2
+      <h2>Come creare un template per i post</h2>
       <div>
-        <p class="autor">
-         <i class="fas fa-wine-bottle"></i> di Mario Rossi - pubblicato il 25-10-2020
-        </p>
+        <p class="autor"><i class="fas fa-pen-fancy"></i> di Mario Rossi - <i class="far fa-clock"></i> pubblicato il 25-10-2020</p>
 
-        <p>
-          La prima cosa da fare è suddividere in blocchi logici la pagina,
-          identificando le <b>parti comuni</b> da applicare a tutte le pagine
-        </p>
+        <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <b>parti comuni</b> da applicare a tutte le pagine</p>
 
         <p>Le varie aree saranno quindi suddivise in:</p>
       </div>
@@ -48,39 +43,22 @@
       <div>
         <ul>
           <li>Contenuti di intestazione del tag &lt;header&gt;</li>
-          <li>
-            Contenuti centrali variabili del tag &lt;main&gt;(corpo principale)
-          </li>
-          <li>
-            Contenuti di fine pagina comuni, da inserire nel tag &lt;footer&gt;
-          </li>
+          <li>Contenuti centrali variabili del tag &lt;main&gt;(corpo principale)</li>
+          <li>Contenuti di fine pagina comuni, da inserire nel tag &lt;footer&gt;</li>
         </ul>
       </div>
 
       <article>
         <h2>Formattazione dle codice</h2>
         <div>
-          <p>
-            Il testo dell'articolo dovrà essere formattato per identificare
-            tutte le parti da <b>selezionare con i CSS</b>. Perciò i passi
-            saranno:
-          </p>
+          <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <b>selezionare con i CSS</b>. Perciò i passi saranno:</p>
           <ol>
-            <li>
-              Progettare il markup assegnando ad ogni specifico testo il tag
-              appropriato
-            </li>
-            <li>
-              Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso
-              il basso
-            </li>
+            <li>Progettare il markup assegnando ad ogni specifico testo il tag appropriato</li>
+            <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
             <li>Applicare gli stili CSS</li>
           </ol>
 
-          <p>
-            L'applicazione di stili CSS è cresciuta negli anni fino a
-            raggiungere la diffusione pressoché totale.
-          </p>
+          <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.</p>
         </div>
 
         <table>
@@ -104,7 +82,7 @@
             </tr>
           </tbody>
           <tbody>
-            <tr>
+            <tr class="grey">
               <td>2002</td>
               <td>35%</td>
               <td>22%</td>
@@ -118,7 +96,7 @@
             </tr>
           </tbody>
           <tbody>
-            <tr>
+            <tr class="grey">
               <td>2008</td>
               <td>80%</td>
               <td>51%</td>
@@ -138,12 +116,8 @@
         <div>
           <p>
             Un test di validazione potrà essere fatto tramite il
-            <a href="https://jigsaw.w3.org/css-validator/" target="_blank"
-              >tool online</a
-            >
-            dedicato allo scopo. Una volta ottimizzato il tutto, avremo
-            raggiunto il nostro obiettivo ed essere stati dei veri developers
-            come loro:
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank">tool online</a>
+            dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:
           </p>
           <iframe
             width="315"
@@ -160,10 +134,7 @@
 
       <section>
         <h3>Novità!</h3>
-        <p>
-          Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
-          nostra newsletter:
-        </p>
+        <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
 
         <form action="email" method="get">
           <fieldset>
@@ -195,8 +166,7 @@
       <p>Blog Epicode ©2023</p>
       <p>
         <i
-          >Testata online di Mario Rossi, registrata con prot. n.213/2018 - via
-          Luigi Einaudi 2 - Milano. P.IVA 00112233.
+          >Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233.
           <a href="mailto:info@epicode.school">info@epicode.school</a></i
         >
       </p>
