--- a/index.html
+++ b/index.html
@@ -113,13 +113,14 @@
       </article>
 
       <section>
-        <div>
+        <div class="videobox">
           <p>
             Un test di validazione potrà essere fatto tramite il
             <a href="https://jigsaw.w3.org/css-validator/" target="_blank">tool online</a>
             dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:
           </p>
           <iframe
+            class="video"
             width="315"
             height="315"
             src="https://www.youtube.com/embed/dvOvHXruEDM?si=Md_DylR1w-DRx3Pc"
@@ -132,8 +133,8 @@
         </div>
       </section>
 
-      <section>
-        <h3>Novità!</h3>
+      <section class="news">
+        <h3>NOVITA`!</h3>
         <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
 
         <form action="email" method="get">
